Fixed: background-image was not centered on resize

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -47,7 +47,7 @@ $font-color: #fff;
 }
 
 .main {
-  background: url('../../assets/Main.png') no-repeat;
+  background: url('../../assets/Main.png') no-repeat center;
   background-size: cover;
   display: flex;
   flex-direction: column;
